<resources>
    <string name="app_name">EHealth</string>
    <string name="signup_btn">Sign Up</string>
    <string name="login_btn">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="back_btn">Back</string>
    <string name="reset_password_btn">Reset password</string>
    <string name="get_password_btn">Get password link</string>
    <string name="update_password_btn">Update password</string>
    <string name="view_data_btn">View data</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_sensor_motion_switch">Motion tracking</string>
    <string name="settings_sensor_steps_switch">Step tracking</string>
    <string name="settings_sensor_location_switch">Location tracking</string>

    <string name="step_goal_text">Step Ziel: </string>
    <string name="daily_steps_text">Heutige Schritte: </string>
    <string name="header_steps">Schritte:</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="user_name_test">Steffen Klute</string>
    <string name="user_email_test">sk.tette@web.de</string>
    <string name="step_goal_input_hint">Schrittziel eingeben</string>
    <string name="step_goal_btn">update</string>
    <string name="room_id_input_hint">Room id eingeben</string>
    <string name="room_id_btn">update</string>

    <string name="menu_home">Home</string>
    <string name="menu_movement_data">Movement data</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>

    <!-- Shared Preferences Keys -->
    <string name="sp_file_name">ehealth_shared_preferences</string>
    <string name="sp_device_id_key">deviceID</string>
    <string name="sp_user_uid">userUID</string>
    <string name="upload_date">upload_date</string>
</resources>
