<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movement_data"
            android:icon="@drawable/ic_moving"
            android:title="@string/menu_movement_data" />
    </group>

    <item android:title="Advanced">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_build"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>